--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#">Instagram</a><br>
         <a href="#">Facebook</a><br>
         <a href="#">Email</a><br>
-        <b>Number phone - 0634997457</b>
+        <b>Number phone - +380634997457</b>
     </p>
 </body>
 </html>
