added some information about study

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <P>
         <b>live in Cherkasy</b>
         <em>i have 20 years old</em>
+        <b>also i am studying at the webacademy</b>
     </P>
     <p>
         <b>my contacts</b><br>
