added some info about myself(list)

--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
         <a href="#">Email</a><br>
         <b>Number phone - +380634997457</b>
     </p>
+    <h2>So, i am</h2>
+    <ul>
+        <li>friendly</li>
+        <li>funny</li>
+        <li>social</li>
+        <li>little serious</li>
+    </ul>
 </body>
 </html>
