changed file calendar(hw4)

--- a/hw4/calendar.html
+++ b/hw4/calendar.html
@@ -72,7 +72,7 @@
                 <button class="aside-button">
                     <img class="aside-date__img" src="img/prev-icon.png" alt="icon-1">
                 </button>
-                <h2 class="aside-date__text">March 2018</h2>
+                <h1 class="aside-date__text">March 2018</h1>
                 <button class="aside-button">
                     <img class="aside-date__img"src="img/Shape.png" alt="icon-2">
                 </button>
@@ -102,73 +102,119 @@
                     <a href="#" class="aside-date-week__link">Sun</a>
                 </li>
             </ul>
-
-
             <ul class="aside__main-list">
-                <li class="aside__main-list__element">
-                    <a href="" class="aside__main-list__link">1</a>
-                    <a href="" class="aside__main-list__link">2</a>
-                    <a href="" class="aside__main-list__link">3</a>
-                    <a href="" class="aside__main-list__link">4</a>
-                    <a href="" class="aside__main-list__link">5</a>
-                    <a href="" class="aside__main-list__link">6</a>
-                    <a href="" class="aside__main-list__link">7</a>
-
-
-                </li>
-                <li class="aside__main-list__element">
-                    <a href="" class="aside__main-list__link">8</a>
-                    <a href="" class="aside__main-list__link">9</a>
-                    <a href="" class="aside__main-list__link">10</a>
-                    <a href="" class="aside__main-list__link">11</a>
-                    <a href="" class="aside__main-list__link">12</a>
-                    <a href="" class="aside__main-list__link">13</a>
-                    <a href="" class="aside__main-list__link">14</a>
-                </li>
-                <li class="aside__main-list__element">
-                    <a href="" class="aside__main-list__link">15</a>
-                    <a href="" class="aside__main-list__link">16</a>
-                    <a href="" class="aside__main-list__link">17</a>
-                    <a href="" class="aside__main-list__link">18</a>
-                    <a href="" class="aside__main-list__link">19</a>
-                    <a href="" class="aside__main-list__link">20</a>
-                    <a href="" class="aside__main-list__link">21</a>
-                </li>
-                <li class="aside__main-list__element">
-                    <a href="" class="aside__main-list__link">22</a>
-                    <a href="" class="aside__main-list__link">23</a>
-                    <a href="" class="aside__main-list__link">24</a>
-                    <a href="" class="aside__main-list__link">25</a>
-                    <a href="" class="aside__main-list__link">26</a>
-                    <a href="" class="aside__main-list__link">27</a>
-                    <a href="" class="aside__main-list__link">28</a>
-                </li>
-                <li class="aside__main-list__element">
-                    <a href="" class="aside__main-list__link">29</a>
-                    <a href="" class="aside__main-list__link">30</a>
-                    <a href="" class="aside__main-list__link">31</a>
-                    <a href="" class="aside__main-list__link aside__main-list__link__opasity-style">1</a>
-                    <a href="" class="aside__main-list__link aside__main-list__link__opasity-style">2</a>
-                    <a href="" class="aside__main-list__link aside__main-list__link__opasity-style">3</a>
-                    <a href="" class="aside__main-list__link aside__main-list__link__opasity-style">4</a>
-                </li>
-            </ul>   
-            <hr class="aside-top-line">
-            <div class="aside__categories">
-                Your categories
-            </div>
-            <div class="aside-wrapper__categories">
-                <div class="aside-wrapper__categories__finance aside__general-style-class">
-                    <a href="#" class="just_link"> FINANCE </a>
-                </div>
-                <div class="aside-wrapper__categories__management aside__general-style-class">
-                    <a href="#" class="just_link">MANAGEMENT</a>
-                </div>
-                <div class="aside-wrapper__categories__design aside__general-style-class">
-                   <a href="#" class="just_link"> DESIGN </a>
-                </div>
-            </div>
-        </div>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">1</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">2</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">3</a
+            ></li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">4</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">5</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">6</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">7</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">8</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">9</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">10</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">11</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">12</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">13</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">14</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">15</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">16</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">17</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">18</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">19</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">20</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">21</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">22</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">23</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">24</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">25</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">26</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">27</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">28</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">29</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">30</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">31</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">1</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">2</a>
+    </li>
+    <li class="aside__main-list__element">
+        <a href="" class="aside__main-list__link">3</a>
+    </li>
+</ul>  
+<hr class="aside-top-line">
+<div class="aside__categories">
+    Your categories
+</div>
+<div class="aside-wrapper__categories">
+        <a href="#" class="aside-wrapper__categories__finance aside__general-style-class"> FINANCE </a>
+         <a href="#" class="aside-wrapper__categories__management aside__general-style-class">MANAGEMENT</a>
+        <a href="#" class="aside-wrapper__categories__design aside__general-style-class"> DESIGN </a> 
+</div>
     </div>
 </body>
 </html>
